--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
           'javax.annotation:javax.annotation-api:1.3.2',
           'io.swagger.core.v3:swagger-annotations:2.1.12',
           'com.google.code.gson:gson:2.8.9',
+          'com.amazonaws:aws-java-sdk-dynamodb:1.12.131',
   )
 
   testImplementation("junit:junit:4.13.2")
