--- a/api-spec/m-site.yaml
+++ b/api-spec/m-site.yaml
@@ -75,7 +75,7 @@ paths:
                 firstName: 'John'
                 lastName: 'Doe'
                 email: 'email@domain.com'
-                fellowhip: '3fa85f64-5717-4562-b3fc-2c963f66afa6'
+                fellowhipId: '3fa85f64-5717-4562-b3fc-2c963f66afa6'
                 phone:
                   -
                     type: 'cell'
@@ -105,7 +105,7 @@ paths:
                 firstName: 'John'
                 lastName: 'Doe'
                 email: 'email@domain.com'
-                fellowhip: '3fa85f64-5717-4562-b3fc-2c963f66afa6'
+                fellowhipId: '3fa85f64-5717-4562-b3fc-2c963f66afa6'
                 phone:
                   -
                     type: 'cell'
@@ -206,7 +206,7 @@ components:
         email:
           type: string
           example: 'some@email.com'
-        fellowship:
+        fellowshipId:
           type: string
           format: uuid
         address:
